--- a/front end/html-css-parte-3/css/style.css
+++ b/front end/html-css-parte-3/css/style.css
@@ -73,3 +73,57 @@ footer p {
   color: #ffff;
   font-size: 13px;
 }
+main {
+  width: 940px;
+  margin: 0 auto;
+}
+form {
+  margin: 40px 0px;
+}
+form label,
+form legend {
+  display: block;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.input-padrao {
+  display: block;
+  margin-bottom: 20px;
+  padding: 10px 25px;
+  width: 50%;
+}
+.checkbox {
+  margin: 20px 0;
+}
+.enviar {
+  width: 40%;
+  padding: 15px 0;
+  background-color: orange;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  transition: 1s all;
+  cursor: pointer;
+}
+
+.enviar:hover {
+  background-color: darkorange;
+  transform: scale(1.2);
+}
+
+table {
+  margin: 20px 0 40px;
+}
+thead {
+  background-color: #555555;
+  color: white;
+  font-weight: bold;
+}
+td,
+th {
+  border: 1px solid black;
+  padding: 8px 15px;
+}
