--- a/front end/html-css parte-4 avançando no css/css/style.css
+++ b/front end/html-css parte-4 avançando no css/css/style.css
@@ -1,3 +1,7 @@
+body {
+	font-family: 'Montserrat', sans-serif;
+}
+
 header {
 	background: #BBBBBB;
 	padding: 20px 0;
@@ -80,7 +84,7 @@ nav a:hover {
 
 footer {
 	text-align: center;
-	background: url("bg.jpg");
+	background: url(../img/bg.jpg);
 	padding: 40px 0;
 }
 
@@ -182,4 +186,18 @@ td, th {
 
 .imagembeneficios {
 	width: 60%;
+}
+
+.mapa {
+	padding: 3em 0;
+}
+
+.mapa p {
+	margin: 0 0 2em;
+	text-align: center;
+}
+
+.video {
+	width: 560px;
+	margin: 1em auto;
 }
