--- a/front end/html-css parte-4 avançando no css/css/style.css
+++ b/front end/html-css parte-4 avançando no css/css/style.css
@@ -84,7 +84,7 @@ nav a:hover {
 
 footer {
 	text-align: center;
-	background: url(../img/bg.jpg);
+	background: black;
 	padding: 40px 0;
 }
 
@@ -92,11 +92,6 @@ footer {
 	color: #FFFFFF;
 	font-size: 13px;
 	margin: 20px 0 0;
-}
-
-main {
-	width: 940px;
-	margin: 0 auto;
 }
 
 form {
@@ -166,6 +161,13 @@ td, th {
 	clear: left;
 }
 
+.principal{
+	padding: 3em 0;
+	background-color: #FEFEFE;
+	width: 940px;
+	margin: 0 auto;
+}
+
 .principal p {
 	margin: 0 0 1em;
 }
@@ -184,12 +186,34 @@ td, th {
 	margin: 0 20px 20px 0;
 }
 
-.imagembeneficios {
+.beneficios{
+	padding: 3em 0;
+	background-color: #888888;
+}
+
+.conteudo-beneficios{
+	width: 640px;
+	margin: 0 auto;
+}
+
+.lista-beneficios{
+	width: 40%;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.imagem-beneficios {
 	width: 60%;
 }
 
 .mapa {
 	padding: 3em 0;
+	background: linear-gradient(#FEFEFE, #888888);
+}
+
+.mapa-conteudo{
+	width: 940px;
+	margin: 0 auto;
 }
 
 .mapa p {
@@ -199,5 +223,18 @@ td, th {
 
 .video {
 	width: 560px;
-	margin: 1em auto;
+	margin: 2em auto;
 }
+
+.itens{
+	line-height: 1.5;
+}
+
+.itens:first-child{
+	font-weight: bold;
+}
+
+.itens::before{
+	content: "🟊 ";
+}
+
