--- a/front end/flexbox/css/flexbox.css
+++ b/front end/flexbox/css/flexbox.css
@@ -33,7 +33,7 @@
 	display: flex;
 	/*flex-direction: column;
 	flex-wrap: wrap;*/
-	flex-flow: column wrap;
+	flex-flow: column wrap; /*direção e quebrar para próxima coluna, flex flow é um atalho*/
 	height: 250px;
 }
 
@@ -68,7 +68,7 @@
 }
 
 .videoSobre-sobre-list {
-	flex-grow: 1;
+	flex-grow: 1; /*pega a parte que sobrou do lado do elemento*/
 }
 
 .videoSobre-video {
@@ -88,7 +88,7 @@
 	}
 
 	.conteudoPrincipal-cursos {
-		flex-direction: column;
+		flex-direction: column;  
 	}
 
 	.conteudoPrincipal-cursos-link {
@@ -111,7 +111,7 @@
 
 	.rodapePrincipal-contatoForm {
 		width: 100%;
-	}
+	}  
 
 	.rodapePrincipal-contatoForm-fieldset {
 		justify-content: center;
